remove leyden aot and optimize test stuff